adjustment to the error of returning null in the list of reviews